2005-02-24  Raphael Higino  <raphaelh@cvs.gnome.org>

	* configure.in: Added pt_BR to ALL_LINGUAS.

2005-02-24  Tommi Vainikainen  <thv@iki.fi>

	* configure.in (ALL_LINGUAS): Added fi.

2005-02-24  Marcel Telka  <marcel@telka.sk>

	* configure.in (ALL_LINGUAS): Added sk.

2005-02-23  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "sv" to ALL_LINGUAS.

2005-02-23  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* configure.in: Added "es" to ALL_LINGUAS.

2005-02-23  Christian Neumair  <chris@gnome-de.org>

	* src/nautilus-open-terminal.c: Fix stupid bug where desktop wasn't
	recognized.

2005-02-23  Christian Neumair  <chris@gnome-de.org>

	* src/Makefile.am: Fix library name.

	* src/nautilus-open-terminal.c: Use new helper and bitfield to get
	terminal-specific file info from NautilusFileInfo and use home
	path as working directory if terminal is fired up from desktop.
	Simplify/clean-up code.

2005-02-22  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2005-02-22  Christian Neumair  <chris@gnome-de.org>

	* .cvsignore:
	* po/.cvsignore:
	* src/.cvsignore: Added.

	* src/Makefile.am:
	* configure.in: Don't depend on GNOME-VFS, eel.
	* src/*.c: Use uri->path converter from glib instead of relying on
	GNOME-VFS. Other minor cleanups, include fixes.

2005-02-22  Christian Neumair  <chris@gnome-de.org>

	* *: Checked into CVS with slight code fixes.

== 0.1 "Tarball Lost" Release ==

2004-05-09  Christian Neumair  <chris@gnome-de.org>

	* *: Initial release.