@@ -11,6 +11,7 @@ AM_CONFIG_HEADER(config.h)
 
 NAUTILUS_REQUIRED=2.6.0
 EEL_REQUIRED=2.6.0
+LIBGNOME_DESKTOP_REQUIRED=2.8.0
 GLIB_REQUIRED=2.4.0
 
 AC_PROG_CC
@@ -26,7 +27,7 @@ fi
 
 PKG_CHECK_MODULES(NAUTILUS, libnautilus-extension >= $NAUTILUS_REQUIRED glib-2.0 >= $GLIB_REQUIRED)
 PKG_CHECK_MODULES(GCONF, gconf-2.0)
-PKG_CHECK_MODULES(SN, libstartup-notification-1.0)
+PKG_CHECK_MODULES(GNOMEDESKTOP, gnome-desktop-2.0 >= $LIBGNOME_DESKTOP_REQUIRED)
 
 dnl make GNOME_CFLAGS and GNOME_LIBS available
 AC_SUBST(NAUTILUS_CFLAGS)
@@ -35,8 +36,8 @@ AC_SUBST(NAUTILUS_LIBS)
 AC_SUBST(GCONF_CFLAGS)
 AC_SUBST(GCONF_LIBS)
 
-AC_SUBST(SN_CFLAGS)
-AC_SUBST(SN_LIBS)
+AC_SUBST(GNOMEDESKTOP_CFLAGS)
+AC_SUBST(GNOMEDESKTOP_LIBS)
 
 dnl intltool stuff
 AC_PROG_INTLTOOL(0.18)
